# esp-wifi-sys

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  cfg.toml  esp32-wifi-link.x  esp32c3-wifi-link.x  examples.md  mkbindings.bat  run_tests.bat  rustfmt.toml  smoketest.bat
.cargo/: config.toml
.github/workflows/: changelog.yml  ci.yaml  ci.yml
c/headers/: esp_coexist_internal.h  nvs.h
c/include/: esp_coexist_internal.h  esp_event.h  esp_system.h  include.h  phy.h
docs/: tuning.md
esp-wifi/: Cargo.toml  README.md  build.rs  smoketest.bat
esp-wifi-sys/: Cargo.toml  README.md  build.rs
esp-wifi-sys-esp32/: Cargo.toml  README.md  build.rs
esp-wifi-sys-esp32/.cargo/: config.toml
esp-wifi-sys-esp32/src/: include.rs
esp-wifi-sys-esp32c2/: Cargo.toml  README.md  build.rs
esp-wifi-sys-esp32c2/.cargo/: config.toml
esp-wifi-sys-esp32c2/src/: include.rs
esp-wifi-sys-esp32c3/: Cargo.toml  README.md  build.rs
esp-wifi-sys-esp32c3/src/: include.rs
esp-wifi-sys-esp32c5/: Cargo.toml  README.md
esp-wifi-sys-esp32c5/src/: include.rs  lib.rs
esp-wifi-sys-esp32c6/: Cargo.toml  README.md  build.rs
esp-wifi-sys-esp32c6/src/: include.rs
esp-wifi-sys-esp32c61/: Cargo.toml  README.md
esp-wifi-sys-esp32c61/src/: include.rs  lib.rs
esp-wifi-sys-esp32h2/: Cargo.toml  README.md  build.rs
esp-wifi-sys-esp32h2/src/: include.rs
esp-wifi-sys-esp32s2/: Cargo.toml  README.md  build.rs
esp-wifi-sys-esp32s2/.cargo/: config.toml
esp-wifi-sys-esp32s2/src/: include.rs
esp-wifi-sys-esp32s3/: Cargo.toml  README.md  build.rs
esp-wifi-sys-esp32s3/.cargo/: config.toml
esp-wifi-sys-esp32s3/src/: include.rs  lib.rs
esp-wifi-sys/.cargo/: config.toml
esp-wifi-sys/headers/: esp_event.h  esp_system.h  esp_task.h  nvs.h
esp-wifi-sys/headers/esp32/: esp_bt.h  sdkconfig.h
esp-wifi-sys/headers/esp32c2/: esp_bt.h  sdkconfig.h
esp-wifi-sys/headers/esp32c3/: esp_bt.h  sdkconfig.h
esp-wifi-sys/headers/esp32c6/: esp_bt.h  sdkconfig.h
esp-wifi-sys/headers/esp32h2/: esp_bt.h  sdkconfig.h
esp-wifi-sys/headers/esp32s2/: sdkconfig.h
esp-wifi-sys/headers/esp32s3/: esp_bt.h  sdkconfig.h
esp-wifi-sys/headers/esp_private/: wifi.h
esp-wifi-sys/include/: esp_coexist_internal.h  include.h
esp-wifi-sys/include/esp32/: esp_bt.h
esp-wifi-sys/include/esp32c2/: esp_bt.h
esp-wifi-sys/include/esp32c3/: esp_bt.h
esp-wifi-sys/include/esp32s2/: sdkconfig.h
esp-wifi-sys/include/esp32s3/: sdkconfig.h
esp-wifi-sys/include/esp_private/: esp_wifi_private.h
esp-wifi-sys/ld/esp32/: rom_functions.x
esp-wifi-sys/ld/esp32c2/: rom_functions.x
esp-wifi-sys/ld/esp32c3/: rom_functions.x
esp-wifi-sys/ld/esp32c6/: rom_functions.x
esp-wifi-sys/ld/esp32h2/: rom_functions.x
esp-wifi-sys/ld/esp32s2/: rom_functions.x
esp-wifi-sys/ld/esp32s3/: rom_functions.x
esp-wifi-sys/libs/esp32c2/: NOTICE  README.md
esp-wifi-sys/libs/esp32c6/: NOTICE
esp-wifi-sys/libs/esp32h2/: NOTICE  README.md
esp-wifi-sys/src/: c_types.rs  lib.rs
esp-wifi-sys/src/include/: esp32.rs  esp32c2.rs  esp32c3.rs  esp32c6.rs  esp32h2.rs  esp32s2.rs  esp32s3.rs
esp-wifi/.cargo/: config.toml
esp-wifi/docs/: examples.md
esp-wifi/examples/: access_point.rs  bench.rs  coex.rs  dhcp.rs  embassy_access_point.rs  embassy_bench.rs  embassy_dhcp.rs  embassy_esp_now.rs  esp_now.rs  static_ip.rs
esp-wifi/src/: lib.rs  log_macros.rs  tasks.rs  timer_esp32.rs  timer_esp32c2.rs  timer_esp32c3.rs  timer_esp32c6.rs  timer_esp32s2.rs  timer_esp32s3.rs  wifi_interface.rs
examples/: ble.rs  coex.rs  dhcp.rs  static_ip.rs
examples-esp32/: Cargo.toml
examples-esp32/.cargo/: config.toml
examples-esp32/examples/: access_point.rs  async_ble.rs  ble.rs  coex.rs  dhcp.rs  embassy_access_point.rs  embassy_dhcp.rs  embassy_esp_now.rs  embassy_esp_now_duplex.rs  esp_now.rs  static_ip.rs
examples-esp32c2/: Cargo.toml
examples-esp32c2/.cargo/: config.toml
examples-esp32c2/examples/: access_point.rs  async_ble.rs  ble.rs  coex.rs  dhcp.rs  embassy_access_point.rs  embassy_dhcp.rs  embassy_esp_now.rs  embassy_esp_now_duplex.rs  esp_now.rs  static_ip.rs
examples-esp32c2/src/: lib.rs
examples-esp32c3/: Cargo.toml
examples-esp32c3/.cargo/: config.toml
examples-esp32c3/examples/: access_point.rs  async_ble.rs  ble.rs  coex.rs  dhcp.rs  embassy_access_point.rs  embassy_dhcp.rs  embassy_esp_now.rs  esp_now.rs  static_ip.rs
examples-esp32c6/: Cargo.toml
examples-esp32c6/.cargo/: config.toml
examples-esp32c6/examples/: access_point.rs  async_ble.rs  ble.rs  coex.rs  dhcp.rs  embassy_access_point.rs  embassy_dhcp.rs  embassy_esp_now.rs  embassy_esp_now_duplex.rs  esp_now.rs  static_ip.rs
examples-esp32s2/: Cargo.toml
examples-esp32s2/.cargo/: config.toml
examples-esp32s2/examples/: access_point.rs  coex.rs  dhcp.rs  embassy_access_point.rs  embassy_dhcp.rs  embassy_esp_now.rs  embassy_esp_now_duplex.rs  esp_now.rs  static_ip.rs
examples-esp32s3/: Cargo.toml
examples-esp32s3/.cargo/: config.toml
examples-esp32s3/examples/: access_point.rs  async_ble.rs  ble.rs  coex.rs  dhcp.rs  embassy_access_point.rs  embassy_dhcp.rs  embassy_esp_now.rs  embassy_esp_now_duplex.rs  esp_now.rs  esp_now_async_duplex.rs  esp_now_duplex.rs  static_ip.rs
examples-util/: Cargo.toml  util.rs
examples-util/src/: lib.rs
examples/ble_esp32/: main.rs
examples/ble_esp32c3/: main.rs
examples/coex_esp32/: main.rs
examples/coex_esp32c3/: main.rs
examples/dhcp_esp32/: main.rs
examples/dhcp_esp32c3/: main.rs
extras/esp-wifishark/: Cargo.toml  README.md
headers/: esp_coexist.h  esp_event.h  esp_system.h  esp_wpa.h  nvs.h
headers/esp32/: esp_bt.h  sdkconfig.h
headers/esp32c2/: esp_bt.h
headers/esp32c3/: esp_bt.h  sdkconfig.h
headers/esp32c6/: sdkconfig.h
headers/esp32s2/: sdkconfig.h
headers/esp32s3/: esp_bt.h  sdkconfig.h
headers/esp_private/: esp_wifi_private.h  (+1 more)
include/: include.h
src/: allocator.rs  lib.rs  memory_fence.rs  tasks.rs  timer.rs  timer_esp32.rs  timer_esp32c2.rs  timer_esp32c3.rs  timer_esp32s2.rs  timer_esp32s3.rs  wifi_interface.rs
xtask/: Cargo.toml
(+106 files in other folders)
