[workspace]
members = ["esp-wifi", "esp-wifi-sys", "xtask"]
exclude = ["extras/bench-server", "extras/esp-wifishark"]
resolver = "2"

[profile.release]
opt-level = 3
debug = true

[workspace.dependencies]
defmt = "=0.3.5"
esp32c3-hal = { version = "0.14.0", default-features = false }
esp32c2-hal = { version = "0.12.0", default-features = false }
esp32c6-hal = { version = "0.7.0", default-features = false }
esp32h2-hal = { version = "0.5.0", default-features = false }
esp32-hal = { version = "0.17.0", default-features = false }
esp32s3-hal = { version = "0.14.0", default-features = false }
esp32s2-hal = { version = "0.14.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "socket-raw",
] }
critical-section = "1.1.1"
portable-atomic = { version = "1.5", default-features = false }
portable_atomic_enum = { version = "0.3.0", features = ["portable-atomic"] }
log = "0.4.20"
embedded-svc = { version = "0.26.4", default-features = false, features = [] }
enumset = { version = "1.1.3", default-features = false }
linked_list_allocator = { version = "0.10.5", default-features = false, features = [
    "const_mut_refs",
] }
embedded-io = { version = "0.6.1", default-features = false }
fugit = "0.3.7"
heapless = { version = "0.8", default-features = false }
num-derive = { version = "0.4" }
num-traits = { version = "0.2", default-features = false }
esp-wifi-sys = { version = "0.1.0", path = "../esp-wifi-sys" }
embassy-sync = { version = "0.5.0" }
embassy-futures = { version = "0.1.0" }
toml-cfg = "0.1.3"
libm = "0.2.7"
cfg-if = "1.0.0"
static_cell = { version = "2.0", features = ["nightly"] }

embassy-net-driver = { version = "0.2" }
embassy-net = { version = "0.4.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "0db8fcb", features = [
    "macros",
] }
embassy-executor = { version = "0.5.0", package = "embassy-executor", features = [
    "nightly",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0" }
esp-println = { version = "0.8.0" }
esp-backtrace = { version = "0.10.0", features = [
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
embedded-hal-async = { version = "1.0.0" }
embedded-io-async = { version = "0.6.0" }

futures-util = { version = "0.3.28", default-features = false, features = [
    "portable-atomic",
] } # need this to activate portable-atomic on AtomicWaker even though we don't use it
atomic-waker = { version = "1.1.2", default-features = false, features = [
    "portable-atomic",
] } # need this to activate portable-atomic on AtomicWaker used by embedded-svc even though we don't use it

[patch.crates-io]
esp-hal-common = { git = "https://github.com/esp-rs/esp-hal", rev = "99c46d6a4e7aefa1be5cb2778418e19eafdb1d70", package = "esp-hal-common" }
esp32c2-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "99c46d6a4e7aefa1be5cb2778418e19eafdb1d70", package = "esp32c2-hal" }
esp32c3-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "99c46d6a4e7aefa1be5cb2778418e19eafdb1d70", package = "esp32c3-hal" }
esp32c6-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "99c46d6a4e7aefa1be5cb2778418e19eafdb1d70", package = "esp32c6-hal" }
esp32h2-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "99c46d6a4e7aefa1be5cb2778418e19eafdb1d70", package = "esp32h2-hal" }
esp32-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "99c46d6a4e7aefa1be5cb2778418e19eafdb1d70", package = "esp32-hal" }
esp32s3-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "99c46d6a4e7aefa1be5cb2778418e19eafdb1d70", package = "esp32s3-hal" }
esp32s2-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "99c46d6a4e7aefa1be5cb2778418e19eafdb1d70", package = "esp32s2-hal" }
embedded-svc = { git = "https://github.com/esp-rs/embedded-svc", rev = "fb0483e4b3c2bfcada053e8eed8e2e0bde415487", package = "embedded-svc" }
