[workspace]
members = ["esp-wifi", "esp-wifi-sys", "xtask"]
exclude = ["extras/bench-server", "extras/esp-wifishark"]
resolver = "2"

[profile.release]
opt-level = 3
debug = true

[workspace.dependencies]
defmt = "0.3.6"
esp-hal = { version = "0.17.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "socket-raw",
] }
critical-section = "1.1.1"
portable-atomic = { version = "1.5", default-features = false }
portable_atomic_enum = { version = "0.3.0", features = ["portable-atomic"] }
log = "0.4.20"
embedded-svc = { version = "0.27.0", default-features = false, features = [] }
no-std-net = "0.6.0"
enumset = { version = "1.1.3", default-features = false }
linked_list_allocator = { version = "0.10.5", default-features = false, features = [
    "const_mut_refs",
] }
embedded-io = { version = "0.6.1", default-features = false }
fugit = "0.3.7"
heapless = { version = "0.8", default-features = false, features = [
    "portable-atomic",
] }
num-derive = { version = "0.4" }
num-traits = { version = "0.2", default-features = false }
esp-wifi-sys = { version = "0.3.0", path = "../esp-wifi-sys" }
embassy-sync = { version = "0.5.0" }
embassy-futures = { version = "0.1.0" }
toml-cfg = "0.2.0"
libm = "0.2.7"
cfg-if = "1.0.0"
static_cell = { version = "2.0", features = ["nightly"] }

embassy-net-driver = { version = "0.2" }
embassy-net = { version = "0.4.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "9371d7d4d510ba5c936c1eef96674f8fd4f63e8a", features = [
    "macros",
] }
embassy-executor = { version = "0.5.0", package = "embassy-executor", features = [
    "task-arena-size-12288",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0" }
esp-println = { version = "0.9.0", default-features = false }
esp-backtrace = { version = "0.11.0" }
embedded-hal-async = { version = "1.0.0" }
embedded-io-async = { version = "0.6.0" }

futures-util = { version = "0.3.28", default-features = false, features = [
    "portable-atomic",
] } # need this to activate portable-atomic on AtomicWaker even though we don't use it
atomic-waker = { version = "1.1.2", default-features = false, features = [
    "portable-atomic",
] } # need this to activate portable-atomic on AtomicWaker used by embedded-svc even though we don't use it
