[package]
name    = "esp-wifi-sys"
version = "0.4.0"
edition = "2021"
authors = [
    "The ESP-RS team",
]
description  = "Bindings to Espressif's WiFi and Bluetooth low-level drivers"
repository   = "https://github.com/esp-rs/esp-wifi"
license      = "MIT OR Apache-2.0"

keywords = [
    "wifi",
    "bluetooth",
    "esp",
    "no-std",
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]

[dependencies]

[build-dependencies]
anyhow = "1.0.71"

[features]
default = []

# Exactly *one* chip MUST be selected via its feature:
esp32   = []
esp32c2 = []
esp32c3 = []
esp32c6 = []
esp32h2 = []
esp32s2 = []
esp32s3 = []

[package.metadata.docs.rs]
features = ["esp32c3"]
