[package]
name        = "esp-wifi-sys"
version     = "0.7.0"
edition     = "2021"
authors     = ["The ESP-RS team"]
description = "Bindings to Espressif's WiFi and Bluetooth low-level drivers"
repository  = "https://github.com/esp-rs/esp-wifi"
license     = "MIT OR Apache-2.0"

keywords   = ["bluetooth", "esp", "no-std", "wifi"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
log   = { version = "0.4.22", optional = true }
defmt = { version = "0.3.8", optional = true }

[build-dependencies]
anyhow = "1.0.93"

[features]
default = []

# Exactly *one* chip MUST be selected via its feature:
esp32   = []
esp32c2 = []
esp32c3 = []
esp32c6 = []
esp32h2 = []
esp32s2 = []
esp32s3 = []

# Enable log output from binary blobs - requires nightly
sys-logs = []

[package.metadata.docs.rs]
features = ["esp32c3"]
