[package]
name = "examples-esp32c6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-svc.workspace = true
bleps.workspace = true
embassy-executor = { workspace = true, optional = true }
embassy-time.workspace = true
embassy-futures.workspace = true
futures-util.workspace = true
embedded-io.workspace = true
smoltcp.workspace = true
log = { workspace = true, optional = true }
heapless.workspace = true
embassy-net = { workspace = true, optional = true }
embassy-sync.workspace = true

esp32c6-hal.workspace = true
esp-backtrace = { workspace = true, features = ["esp32c6"] }
esp-wifi = { path = "../esp-wifi", default-features = false, features = ["esp32c6", "utils"] }
embedded-hal-async = { workspace = true, optional = true }

[dev-dependencies]
esp-println = { workspace = true, features = [ "esp32c6", "log" ] }

[features]
default = ["esp32c6", "log"]
esp32c6 = []
async = ["esp-wifi/async", "bleps/async", "dep:embedded-hal-async", "esp32c6-hal/async", "esp32c6-hal/embassy-time-timg0", "dep:embassy-executor", "embassy-executor?/arch-riscv32"]
embassy-net = ["esp-wifi/embassy-net", "dep:embassy-net"]
wifi-logs = ["esp-wifi/wifi-logs"]
dump-packets = ["esp-wifi/dump-packets"]
utils = ["esp-wifi/utils"]
enumset = ["esp-wifi/enumset"]
# required for wifi feature
embedded-svc = [ "esp-wifi/embedded-svc" ]
wifi = ["esp-wifi/wifi", "embedded-svc"]
ble = ["esp-wifi/ble"]
phy-enable-usb = ["esp-wifi/phy-enable-usb"]
ps-min-modem = ["esp-wifi/ps-min-modem"]
esp-now = ["esp-wifi/esp-now"]
ipv6 = ["esp-wifi/ipv6"]
#coex = ["esp-wifi/coex"]
log = ["esp-wifi/log", "dep:log", "esp-println/log"]
defmt = ["esp-wifi/defmt", "esp-println/defmt"]
