[package]
name = "examples-esp32s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-svc.workspace = true
bleps.workspace = true
embassy-executor.workspace = true
embassy-time.workspace = true
embassy-futures.workspace = true
futures-util.workspace = true
embedded-io.workspace = true
smoltcp.workspace = true
log = { workspace = true, optional = true }
heapless.workspace = true
embassy-net = { workspace = true, optional = true }

esp32s3-hal.workspace = true
examples-util = { path = "../examples-util", features = ["esp32s3"] }
esp-println = { workspace = true, features = [ "esp32s3" ] }
esp-backtrace = { workspace = true, features = ["esp32s3"] }
esp-wifi = { path = "../esp-wifi", features = ["esp32s3"] }
embedded-hal-async = { workspace = true, optional = true }

[features]
default = ["esp32s3"]
esp32s3 = ["embassy-executor/arch-xtensa"]
async = ["esp-wifi/async", "bleps/async", "dep:embedded-hal-async", "esp32s3-hal/async", "esp32s3-hal/embassy-time-timg0"]
embassy-net = ["esp-wifi/embassy-net","dep:embassy-net"]
wifi-logs = ["esp-wifi/wifi-logs"]
dump-packets = ["esp-wifi/dump-packets"]
utils = ["esp-wifi/utils"]
enumset = ["esp-wifi/enumset"]
# required for wifi feature
embedded-svc = [ "esp-wifi/embedded-svc" ]
wifi = ["esp-wifi/wifi", "embedded-svc"]
ble = ["esp-wifi/ble"]
phy-enable-usb = ["esp-wifi/phy-enable-usb"]
ps-min-modem = ["esp-wifi/ps-min-modem"]
esp-now = ["esp-wifi/esp-now"]
ipv6 = ["esp-wifi/ipv6"]
coex = ["esp-wifi/coex"]
log = ["esp-println/log", "esp-wifi/log", "dep:log"]
log-defmt = ["esp-wifi/log-defmt"]
