[package]
name = "examples-util"
version = "0.1.0"
edition = "2021"

[dependencies]
esp32c3-hal = { workspace = true, optional = true }
esp32c2-hal = { workspace = true, optional = true }
esp32c6-hal = { workspace = true, optional = true }
esp32-hal = { workspace = true, optional = true }
esp32s3-hal = {workspace = true, optional = true }
esp32s2-hal = { workspace = true, optional = true }

[features]
esp32c3 = [ "esp32c3-hal" ]
esp32c2 = [ "esp32c2-hal" ]
esp32c6 = [ "esp32c6-hal" ]
esp32   = [ "esp32-hal" ]
esp32s3 = [ "esp32s3-hal" ]
esp32s2 = [ "esp32s2-hal" ]
